[project]
name = "checkbooknyc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fake-useragent>=2.2.0",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "icecream>=2.1.4",
]
